<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.zenika.tech-lab</groupId>
	<artifactId>tech-lab-ingester</artifactId>
	<version>${revision}</version>

	<properties>
		<quarkus.package.jar.type>uber-jar</quarkus.package.jar.type>
		<!-- This version number makes no sense, cause it has to be changed in
		GitHub Actions (see on_release_build_version.yaml) -->
		<revision>local-SNAPSHOT</revision>
		<compiler-plugin.version>3.13.0</compiler-plugin.version>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
		<quarkus.platform.version>3.17.5</quarkus.platform.version>
		<camel.version>4.9.0</camel.version>
		<skipITs>true</skipITs>
		<surefire-plugin.version>3.5.0</surefire-plugin.version>
	</properties>

    <url>https://riduidel.github.io/tech-lab-ingester/</url>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>Riduidel</id>
            <name>Nicolas Delsaux</name>
            <email>nicolas.delsaux@gmx.fr</email>
            <roles>
                <role>Tech Lead</role>
            </roles>
        </developer>
    </developers>
    <scm>
        <!-- We use https connections for using tech-lab-ingester.github.token as
		password -->
        <connection>scm:git:https://git@github.com/Riduidel/tech-lab-ingester.git</connection>
        <developerConnection>scm:git:https://git@github.com/Riduidel/tech-lab-ingester.git</developerConnection>
        <url>https://github.com/Riduidel/tech-lab-ingester.git</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Riduidel/tech-lab-ingester/issues</url>
    </issueManagement>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/Riduidel/tech-lab-ingester</url>
        </repository>
    </distributionManagement>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${quarkus.platform.group-id}</groupId>
				<artifactId>${quarkus.platform.artifact-id}</artifactId>
				<version>${quarkus.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>${quarkus.platform.group-id}</groupId>
				<artifactId>quarkus-camel-bom</artifactId>
				<version>${quarkus.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!--		<dependency>
			<groupId>io.github.ncasaux</groupId>
			<artifactId>camel-plantuml-jar</artifactId>
			<version>1.8.0</version>
		</dependency>
-->
		<dependency>
		    <groupId>io.quarkus</groupId>
		    <artifactId>quarkus-jdbc-postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-junit5</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.27.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-vertx</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-undertow</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-smallrye-graphql-client</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-flyway</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-hibernate-orm-panache</artifactId>
		</dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-sql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.camel.quarkus</groupId>
            <artifactId>camel-quarkus-csv</artifactId>
        </dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-config-yaml</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-arc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-log</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-timer</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-direct</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-http</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-jackson</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-bean</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-csv</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-csimple</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-ognl</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-endpointdsl</artifactId>
		</dependency>
		<dependency>
			<groupId>io.hawt</groupId>
			<artifactId>hawtio-quarkus</artifactId>
			<version>4.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-management</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.camel.quarkus</groupId>
			<artifactId>camel-quarkus-xml-jaxb</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-rest-client-jackson</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-smallrye-fault-tolerance</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkiverse.bucket4j</groupId>
			<artifactId>quarkus-bucket4j</artifactId>
			<version>1.0.4</version>
		</dependency>

		<dependency>
			<groupId>io.smallrye</groupId>
			<artifactId>smallrye-graphql-client-generator</artifactId>
			<version>2.12.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-google-storage</artifactId>
			<version>${camel.version}</version>
		</dependency>

		<dependency>
		  <groupId>org.apache.camel</groupId>
		  <artifactId>camel-parquet-avro</artifactId>
		  <version>${camel.version}</version>
			<!-- use the same version as your Camel core version -->
		</dependency>

		<!--		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-csimple-joor</artifactId>
			<version>${camel.version}</version>
			<scope>provided</scope>
		</dependency>
-->		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.17.0</version>
		</dependency>

		<!-- Leave test dependencies at the end, because there will be scoping issues otherwise with commons-lang3-->
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit5</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>${quarkus.platform.group-id}</groupId>
				<artifactId>quarkus-maven-plugin</artifactId>
				<version>${quarkus.platform.version}</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<goals>
							<goal>build</goal>
							<goal>generate-code</goal>
							<goal>generate-code-tests</goal>
							<goal>native-image-agent</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<systemProperties>
						<tech-lab-ingester.github.token>${tech-lab-ingester.github.token}</tech-lab-ingester.github.token>
						<tech-lab-ingester.libraries.io.token>
							${tech-lab-ingester.libraries.io.token}</tech-lab-ingester.libraries.io.token>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${compiler-plugin.version}</version>
				<configuration>
					<parameters>true</parameters>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire-plugin.version}</version>
				<configuration>
					<systemPropertyVariables>
						<java.util.logging.manager>
							org.jboss.logmanager.LogManager</java.util.logging.manager>
						<maven.home>${maven.home}</maven.home>
                        <tech-lab-ingester.github.token>${tech-lab-ingester.github.token}</tech-lab-ingester.github.token>
                    </systemPropertyVariables>
                </configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${surefire-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<systemPropertyVariables>
						<native.image.path>
							${project.build.directory}/${project.build.finalName}-runner</native.image.path>
						<java.util.logging.manager>
							org.jboss.logmanager.LogManager</java.util.logging.manager>
						<maven.home>${maven.home}</maven.home>
					</systemPropertyVariables>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>native</id>
			<activation>
				<property>
					<name>native</name>
				</property>
			</activation>
			<properties>
				<skipITs>false</skipITs>
				<quarkus.native.enabled>true</quarkus.native.enabled>
			</properties>
		</profile>
		<profile>
			<id>generate-json-client</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jsonschema2pojo</groupId>
						<artifactId>jsonschema2pojo-maven-plugin</artifactId>
						<version>1.2.2</version>
						<configuration>
							<sourceDirectory>
								${basedir}/src/build/resources/examples</sourceDirectory>
							<targetPackage>
								com.zenika.tech.lab.ingester.librariesio.model</targetPackage>
							<sourceType>json</sourceType>
							<useJakartaValidation>true</useJakartaValidation>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>generate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
